objects/CSS_WS_Warranty__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_Policy_Flag__c</fullName>
        <description>This dropdown will allow the user to select whether the claim is for Warranty or Policy.</description>
        <label>Warranty / Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                    <default>true</default>
                    <label>Warranty</label>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Policy WW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Possession_Flag__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>CSS WS Possession Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Product_Application_Code__c</fullName>
        <label>Product Application Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Product_Application_Description__c</fullName>
        <label>Product Application Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Promotion_ID__c</fullName>
        <label>Promotion ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Quotation_Total_Amount__c</fullName>
        <label>Quotation total amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Reinstatement_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinstatement Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Rejection_Reason__c</fullName>
        <description>rejectionReason</description>
        <inlineHelpText>rejectionReason</inlineHelpText>
        <label>Rejection Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Repair_Days__c</fullName>
        <label>Repair Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Repair_Description__c</fullName>
        <label>Repair Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Repair_Work_Order_Number__c</fullName>
        <label>Repair/Work order number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Replacement_Part__c</fullName>
        <label>Replacement Part</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Crank</fullName>
                </value>
                <value>
                    <fullName>Block + Crank</fullName>
                </value>
                <value>
                    <fullName>Block + Crank + Head</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Request_Justification__c</fullName>
        <label>Request justification</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Requested_Amount__c</fullName>
        <label>Requested amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RescueNumber__c</fullName>
        <label>Rescue Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Revision_After__c</fullName>
        <description>Revision After Code</description>
        <label>Revision After</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Revision_Before__c</fullName>
        <description>Revision Before Code</description>
        <label>Revision Before</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SO_Document_Type__c</fullName>
        <label>Document Type (Invoice)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SO_Extended_Amount__c</fullName>
        <label>Extended Amount (Invoice) ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SO_Transaction_Number__c</fullName>
        <label>Transaction Number (Invoice)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Channel_Of_Distribution__c</fullName>
        <label>Service Provider Channel Of Distribution</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Name_Dealer_ToCharge__c</fullName>
        <label>Service Provider Name (Dealer) To Charge</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Region_Code__c</fullName>
        <label>Service Provider Region Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Region__c</fullName>
        <label>Service Provider Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Service_Model_Certified__c</fullName>
        <label>SP Service Model Certified</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Territory__c</fullName>
        <label>Service Provider Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SP_Warranty_Certified__c</fullName>
        <label>SP Warranty Certified</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRTPenaltyPercentage__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>ODM SRT Percentage Penalty - Value sent to Siebel as is</description>
        <label>CSS_WS_SRTPenaltyPercentage</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Model__c</fullName>
        <label>Service Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Order_Counter_Flag__c</fullName>
        <label>Service Order Counter Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_DR_ToCharge__c</fullName>
        <label>Service Provider (DR) To Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_DR__c</fullName>
        <description>Service provider code - Service provider Name format of the distributor to which the logged in dealer belongs to</description>
        <label>Service Provider (DR)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Dealer_ToCharge__c</fullName>
        <label>Service Provider (Dealer) To Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Dealer__c</fullName>
        <description>Service provider code - Service provider Name format</description>
        <label>Service Provider (Dealer)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_DR_ToCharge__c</fullName>
        <label>Service Provider Name (DR) To Charge</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_DR__c</fullName>
        <label>Service Provider Name (DR)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_Dealer__c</fullName>
        <label>Service Provider Name Dealer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Siebel_Claim_Number__c</fullName>
        <label>Siebel Claim Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Statement_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship whit Relationship</description>
        <label>Statement</label>
        <referenceTo>CSS_WS_Statement__c</referenceTo>
        <relationshipLabel>CSS WS Claims</relationshipLabel>
        <relationshipName>CSS_WS_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Statement_Number__c</fullName>
        <description>Amount Webservice</description>
        <label>Statement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Submited_by__c</fullName>
        <defaultValue>IF(  ISBLANK($User.FirstName), $User.LastName, $User.FirstName)</defaultValue>
        <label>Submitted by</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Support_evidence__c</fullName>
        <label>Support evidence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_System_Code__c</fullName>
        <label>System Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TSM_Approver_Name__c</fullName>
        <label>TSM Approver Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TSM_Date_Days__c</fullName>
        <formula>if((CSS_WS_Login_Variable__c = &apos;FactoryLoggedIn&apos;),(CSS_WS_TSM_Date__c - CSS_WS_Dealer_Date__c ), (CSS_WS_TSM_Date__c - CSS_WS_DR_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSM Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TSM_Date__c</fullName>
        <label>TSM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TSR_Number__c</fullName>
        <label>TSR #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Tax__c</fullName>
        <label>Tax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Technician_Name__c</fullName>
        <description>Technician Name</description>
        <inlineHelpText>Technician Name</inlineHelpText>
        <label>Technician Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Time_In_Service__c</fullName>
        <label>Time in Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Amount_Other_Claimables__c</fullName>
        <label>Total Amount Other Claimables ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Amount_Part__c</fullName>
        <label>Total Amount Part ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Amount_SRT_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount SRT Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Amount_SRT__c</fullName>
        <label>Total Amount SRT ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Amount_Travel__c</fullName>
        <label>Total Amount Travel USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Approved__c</fullName>
        <label>Total Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Claim_Approved__c</fullName>
        <label>Total Claim Approved ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Claimed__c</fullName>
        <label>Total Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Credited__c</fullName>
        <label>Total Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Labor_Approved__c</fullName>
        <label>Total Labor Approved ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Labor__c</fullName>
        <label>Total Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Other_Approved__c</fullName>
        <label>Total Other Approved ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Other__c</fullName>
        <label>Total Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Parts_Approved__c</fullName>
        <label>Total Parts Approved ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Parts__c</fullName>
        <label>Total Parts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Travel_Approved__c</fullName>
        <label>Total Travel Approved ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Travel__c</fullName>
        <label>Total Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Towing_Amount__c</fullName>
        <label>Towing Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Adjustment__c</fullName>
        <formula>IF( CSS_WS_Total_Travel__c  &lt; CSS_WS_Total_Amount_Travel__c  &amp;&amp;   ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Warranty&quot;) ,   ROUND(CSS_WS_Total_Amount_Travel__c, 2)   -   ROUND(CSS_WS_Total_Travel__c, 2) , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Adjustment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Detail_Mode__c</fullName>
        <label>Travel Detail Mode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Distance__c</fullName>
        <label>Travel Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Hours__c</fullName>
        <label>Travel (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Mode__c</fullName>
        <label>Travel Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                    <default>true</default>
                    <label>Car</label>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Boat/Ferry</fullName>
                </value>
                <value>
                    <fullName>Plane/Air</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Paid_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Paid Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Rate__c</fullName>
        <label>Travel Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_Type__c</fullName>
        <label>Travel Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Travel_penalty__c</fullName>
        <label>Travel penalty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Type_Number__c</fullName>
        <description>&quot;Chargeback&quot; or &quot;Payment&quot; Amount webservice</description>
        <inlineHelpText>Amount webservice</inlineHelpText>
        <label>Type Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_US_Date_Days__c</fullName>
        <formula>CSS_WS_US_Date__c -  CSS_WS_DR_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_US_Date__c</fullName>
        <label>US Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_US_Details_Status__c</fullName>
        <label>US Details Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_US_Travel_Adjustment_Reason__c</fullName>
        <label>Travel Adjustment Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_US_Travel_Type__c</fullName>
        <label>Travel Type US</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_VIN__c</fullName>
        <label>VIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyId__c</fullName>
        <label>WarrantyId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Subtype__c</fullName>
        <label>Warranty Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No BIS</fullName>
                    <default>true</default>
                    <label>No BIS</label>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>ReCon Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Motor</fullName>
                    <default>true</default>
                    <label>Motor</label>
                </value>
                <value>
                    <fullName>Parte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Years_On_Service__c</fullName>
        <description>WSD - FD</description>
        <label>Years On Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failure_Point__c</fullName>
        <label>Failure Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <label>Is a clone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mark_Up_Penalty__c</fullName>
        <label>Mark Up Penalty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Approver_Picklist_WW__c</fullName>
        <label>Other Approver Picklist WW</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>044 - Baybah, Mohamed</fullName>
                </value>
                <value>
                    <fullName>053 - Ergette, Garedew</fullName>
                </value>
                <value>
                    <fullName>058 - N Knight, James</fullName>
                </value>
                <value>
                    <fullName>062 - Hoelscher, Ryan</fullName>
                </value>
                <value>
                    <fullName>065 - Reid, Forrester</fullName>
                </value>
                <value>
                    <fullName>074 - Juarez, Miguel</fullName>
                </value>
                <value>
                    <fullName>091 - Dannenbring, Tara</fullName>
                </value>
                <value>
                    <fullName>102 - Butkovich, David</fullName>
                </value>
                <value>
                    <fullName>113 - Clark, Dorothy</fullName>
                </value>
                <value>
                    <fullName>150 - Henry, Josh</fullName>
                </value>
                <value>
                    <fullName>167 - Baca, Timmoth</fullName>
                </value>
                <value>
                    <fullName>176 - Northrup, Darrel</fullName>
                </value>
                <value>
                    <fullName>257 - Green, Monica</fullName>
                </value>
                <value>
                    <fullName>284 - Johnston, Keegan</fullName>
                </value>
                <value>
                    <fullName>300 - Storm, Chad</fullName>
                </value>
                <value>
                    <fullName>316 - Robinson, Charles</fullName>
                </value>
                <value>
                    <fullName>321 - Dobbs, Mikes</fullName>
                </value>
                <value>
                    <fullName>328 - Dawson, Zach</fullName>
                </value>
                <value>
                    <fullName>357 - Elschide, Ryan</fullName>
                </value>
                <value>
                    <fullName>360 - Garrett, Reedi</fullName>
                </value>
                <value>
                    <fullName>417 - Baker, Thomas</fullName>
                </value>
                <value>
                    <fullName>468 - Nasser, Eminou</fullName>
                </value>
                <value>
                    <fullName>480 - Helms, Thomas</fullName>
                </value>
                <value>
                    <fullName>543 - Bechtel, Derek</fullName>
                </value>
                <value>
                    <fullName>573 - Grow, Joshua</fullName>
                </value>
                <value>
                    <fullName>595 - Crow, Jared</fullName>
                </value>
                <value>
                    <fullName>607 - G Jilbert, Stephan</fullName>
                </value>
                <value>
                    <fullName>633 - Tincher, Benjamin</fullName>
                </value>
                <value>
                    <fullName>640 - O Lopez, Gerson</fullName>
                </value>
                <value>
                    <fullName>673 - Martin, Larry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSS WS Claim</label>
    <listViews>
        <fullName>CSS_WS_Queue_CSM_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue CSM</label>
        <queue>CSS_WS_Queue_CSM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_Factory_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Factory</label>
        <queue>CSS_WS_Queue_Factory</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_Factory_P99_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Factory P99</label>
        <queue>CSS_WS_Queue_Factory_P99</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_Paccar_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Paccar</label>
        <queue>CSS_WS_Queue_Paccar</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Ricardo Vazquez</label>
        <queue>CSS_WS_Queue_TSM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_Central_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Moises Cardenas</label>
        <queue>CSS_WS_Queue_TSM_Central</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_North_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Manuel Araujo</label>
        <queue>CSS_WS_Queue_TSM_North</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_P99_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Ricardo Miranda</label>
        <queue>CSS_WS_Queue_TSM_P99</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_Pacific_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Alejandro Orozco</label>
        <queue>CSS_WS_Queue_TSM_Pacific</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_TSM_Southeast_CSS_WS_Warranty</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue TSM - Alfredo Mondragon</label>
        <queue>CSS_WS_Queue_TSM_Southeast</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Paccar_View</fullName>
        <columns>NAME</columns>
        <columns>CSS_WS_Engine_Serial_Number__c</columns>
        <columns>CSS_WS_Policy_Flag__c</columns>
        <columns>CSS_WS_Claim_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSS_WS_Claim_Status__c</field>
            <operation>equals</operation>
            <value>Pending Paccar</value>
        </filters>
        <label>Pending Paccar View</label>
        <language>en_US</language>
        <sharedTo>
            <role>CSS_WS_PACCAR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_TSM_View</fullName>
        <columns>NAME</columns>
        <columns>CSS_WS_Engine_Serial_Number__c</columns>
        <columns>CSS_WS_Policy_Flag__c</columns>
        <columns>CSS_WS_Claim_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSS_WS_Claim_Status__c</field>
            <operation>equals</operation>
            <value>Pending TSM</value>
        </filters>
        <label>Pending TSM View</label>
        <language>en_US</language>
        <sharedTo>
            <role>CSS_WS_CUMMINS_SLP</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>my_claims</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Claims</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Claims</pluralLabel>
    <recordTypes>
        <fullName>CSS_WS_RT_Claimable</fullName>
        <active>true</active>
        <description>Record Type to Limit Other Claimable Validation Rules</description>
        <label>CSS_WS_RT_Claimable</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_Failure</fullName>
        <active>true</active>
        <description>Record Type to Limit Failure Validation Rules</description>
        <label>CSS_WS_RT_Failure</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_Header</fullName>
        <active>true</active>
        <description>Record Type to Limit Header Validation Rules</description>
        <label>CSS_WS_RT_Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_Narrative</fullName>
        <active>true</active>
        <label>CSS_WS_RT_Narrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_Parts</fullName>
        <active>true</active>
        <description>Record Type to Limit Parts Validation Rules</description>
        <label>CSS_WS_RT_Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_SRT</fullName>
        <active>true</active>
        <description>Record Type to Limit SRT Validation Rules</description>
        <label>CSS_WS_RT_SRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSS_WS_RT_Travel</fullName>
        <active>true</active>
        <description>Record Type to Limit Travel Validation Rules</description>
        <label>CSS_WS_RT_Travel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>R04040_SF12</fullName>
        <active>true</active>
        <description>For Multi ESN claims, on each ESN:
Start Date would be mandatory on every ESN unless BIS Flag = Y</description>
        <errorConditionFormula>AND(
    $RecordType.Name = &quot;CSS_WS_RT_Header&quot; 
   ,ISPICKVAL( CSS_WS_Warranty_Subtype__c ,&apos;No BIS&apos;)
   ,ISNULL($ObjectType.CSS_WS_MultiESN__c.Fields.CSS_WS_WarrantyStartDate__c)
   )</errorConditionFormula>
        <errorMessage>Warranty Start Date is Mandatory unless it is a BIS Failure</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R040611_SF16_1</fullName>
        <active>true</active>
        <description>Fail Date cannot be less than Warranty Start Date unless Warranty Start Date is null (BIS Flag = Y)</description>
        <errorConditionFormula>AND(
 ($RecordType.Name = &quot;CSS_WS_RT_Header&quot;)
,(DATEVALUE(CSS_WS_Failure_Date_Time__c) &lt; CSS_WS_Warranty_Start_Date__c)
,(ISPICKVAL(CSS_WS_Warranty_Subtype__c,&apos;BIS&apos;))
)</errorConditionFormula>
        <errorMessage>Failure Date should be greater than Warranty Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R040611_SF16_2</fullName>
        <active>true</active>
        <description>Fail Date cannot be a future date</description>
        <errorConditionFormula>AND
(
 ($RecordType.Name = &quot;CSS_WS_RT_Header&quot;)
,(DATEVALUE(CSS_WS_Failure_Date_Time__c) &gt; TODAY())
)</errorConditionFormula>
        <errorMessage>Failure Date cannot be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R04067_SF17</fullName>
        <active>true</active>
        <description>Failure Point cannot be negative</description>
        <errorConditionFormula>AND 
(
 ($RecordType.Name = &quot;CSS_WS_RT_Header&quot;)
,(VALUE(CSS_WS_Failure_Point_Quantity__c ) &lt;0)
)</errorConditionFormula>
        <errorMessage>Failure Point cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>